[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[project]
name = "yfie"
description = "A command-line app that creates Wi-Fi network connection QR codes."
version = "0.1"

authors = [
  { name="Jahin Z.", email="jahinzee@outlook.com" }
]
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.8"

dependencies = [
    "qrcode",
    "pillow"
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Topic :: System :: Networking",
  "License :: OSI Approved :: Mozilla Public License 2.0 (MPL 2.0)",
  "Operating System :: OS Independent"
]

[project.scripts]
yfie = "yfie:main"


